2010-03-15  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_list.php : Added help link, "alert-matches".

2010-03-12  Sancho Lerena <slerena@artica.es>

	* include/help/es/: Added some missing help files in spanish,
	translated by Julia. Thanks Julia!

	* godmode/groups/modu_group_list.php, 
	godmode/groups/configure_modu_group.php: New module group
	editor/manager. Contributed by Antonio Dos Santos, thanks Antonio!

	* godmode/menu.php: Added modulegroup to menu.

2010-03-12  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/configure_alert_compound.php : Changed not to use
	variable "alert" on java script. IE8 can't handle it as a variable.

2010-03-11  Snacho Lerena <slerena@artica.es>

	* include/help/en/check_other_languages.sh: Small script to show
	help files not translated.

	* include/functions_ui.php: Fixed call to undefined variable.

	* godmode/setup/setup.php: Small box for textarea.

2010-03-10  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Added new default values for purge event,
	string data, audit data, gis data, and snmp trap data.
	
	* include/functions_config.php: Support for new gis_purge config
	token.

	* godmode/setup/performance.php: Added gis_purge to setup.

	* godmode/users/user_list.php: Fixed bug which doesn't allow to
	delete users.
	
	* godmode/users/configure_user.php: Fixed bug with profile assigment
	(Mixed the current user and selected user).

2010-03-10  Junichi Satoh <junichi@rworks.jp>

	* general/license/pandora_info_ja.html : Added the GPL in Japanese.

2010-03-09  Miguel de Dios  <miguel.dedios@artica.es>

	* index.php: changed the deprecated var $REMOTE_ADDR for standar
	$_SERVER['REMOTE_ADDR']. I forget in the last commit.

	* operation/gis_maps/render_view.php, operation/gis_maps/index.php,
	operation/menu.php, godmode/gis_maps/configure_gis_map.php: fix the ACL
	and add in other sites of source code.

2010-03-09  Miguel de Dios  <miguel.dedios@artica.es>
