@@ -571,11 +571,10 @@ $table->data[2][1] = print_select($actions,'action_select','','','','',true);
 $table->data[2][1] .= ' <span id="action_loading" class="invisible">';
 $table->data[2][1] .= '<img src="images/spinner.png" /></span>';
 $table->data[2][1] .= ' <span id="advanced_action" class="advanced_actions invisible">';
-$table->data[2][1] .=  __('From').' ';
+$table->data[2][1] .=  __('Number of alerts match from').' ';
 $table->data[2][1] .= print_input_text ('fires_min', '', '', 4, 10, true);
 $table->data[2][1] .=  ' '.__('to').' ';
 $table->data[2][1] .= print_input_text ('fires_max', '', '', 4, 10, true);
-$table->data[2][1] .= ' '.__('matches of the alert');
 $table->data[2][1] .= print_help_icon ("alert-matches", true);
 $table->data[2][1] .= '</span>';
 $table->data[2][1] .= '</div>';
@@ -597,11 +596,10 @@ print_select ($actions, 'action', '', '', __('None'), 0);
 echo '<br />';
 echo '<span><a href="#" class="show_advanced_actions">'.__('Advanced options').' &raquo; </a></span>';
 echo '<span class="advanced_actions invisible">';
-echo __('From').' ';
+echo __('Number of alerts match from').' ';
 print_input_text ('fires_min', -1, '', 4, 10);
 echo ' '.__('to').' ';
 print_input_text ('fires_max', -1, '', 4, 10);
-echo ' '.__('matches of the alert');
 echo print_help_icon ("alert-matches", true);
 echo '</span>';
 echo '<div class="right">';
